# codeq

./: Cargo.toml  Makefile  README.md  rustfmt.toml
.github/workflows/: ci.yaml
src/: checksum_reader.rs  checksum_writer.rs  codec.rs  error_context_ext.rs  fixed_size.rs  lib.rs  offset_reader.rs  offset_size.rs  offset_writer.rs  sealed.rs  segment.rs  testing.rs  with_checksum.rs
src/codec/: decode.rs  encode.rs  impls.rs  mod.rs
src/codec/impls/: bool_impl.rs  mod.rs  option_impls.rs  string_impl.rs  tuple_2_impl.rs  u32_impl.rs  u64_impl.rs  u8_impl.rs  unit_impl.rs  vec_u8_impl.rs
src/config/: mod.rs
src/offset_size/: offset.rs
src/span/: mod.rs  offset.rs  size.rs
