[package]
name = "codeq"
version = "0.2.0"
edition = "2021"

authors = [
    "Zhang Yanpo <drdr.xp@gmail.com>", 
]
categories = ["algorithms", "data-structures"]
description = "Codec trait"
documentation = "https://docs.rs/codeq"
homepage = "https://github.com/drmingdrmer/codeq"
keywords = ["encode", "decode", "codec"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/drmingdrmer/codeq"


[dependencies]
byteorder = "1.5.0"
crc32fast = "1.4.2"
anyhow = "1.0.89"
