[package]
name = "codeq"
version = "0.5.2"
edition = "2021"

authors = [
    "Zhang Yanpo <drdr.xp@gmail.com>", 
]
categories = ["algorithms", "data-structures"]
description = "Codec trait"
documentation = "https://docs.rs/codeq"
homepage = "https://github.com/drmingdrmer/codeq"
keywords = ["encode", "decode", "codec"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/drmingdrmer/codeq"


[dependencies]
anyhow = "1.0.89"
byteorder = "1.5.0"
crc32fast = { version = "1.4.2", optional = true }
crc64fast-nvme = { version = "1.0.0", optional = true }
derive_more = { version = "1.0.0", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }

[features]
crc32fast = ["dep:crc32fast"]
crc64fast-nvme = ["dep:crc64fast-nvme"]

default = ["crc32fast"]
